--- a/links.html
+++ b/links.html
@@ -19,12 +19,22 @@
       </div>
     </div>
     <div class=content>
-      <h1>Introduction</h1>
-      <p> 
-        The OCA Alliance Technical Site aims to share technical resources and information
-        with people working with AES70.
-        The site itself is curated by members of the
-        <a rel=noopener target=_blank href='http://ocaalliance.org'>OCA Alliance</a>.
+      <h1> Links </h1>
+
+      <h2>OCA Alliance</h2>
+      <p>
+	Trade association promoting and evolving AES70.
+        <br>
+        <br>
+	<a rel=noopener target=_blank href='http://ocaalliance.com'>http://ocaalliance.com</a>
+      </p>
+
+      <h2>AES70 in the AES Journal</h2>
+      <p>
+        <i>The Open Control Architecture</i>,
+        <a rel=noopener target=_blank href='http://www.aes.org/journal/online/JAES_V61/4/'>JAES Volume 61 Issue 4 pp. 185-200; April 2013</a>
+        <br>
+        Comprehensive description of OCA features and mechanisms.
       </p>
     </div>
   </body>
