--- a/downloads.html
+++ b/downloads.html
@@ -70,6 +70,15 @@
         Download here: <a href='downloads/OCA Implementation Chart v04 .xlsm'>OCA Implementation Chart v04 .xlsm</a>
       </p>
 
+      <h2>OCA Wireshark Plugin</h2>
+
+      <p>
+        <a rel=noopener target=_blank href='https://wireshark.org/'>Wireshark</a> is a widely used network protocol analyzer. This plugin allows analyzing OCA network traffic using wireshark.
+      </p>
+      <p>
+        Download here: <a href='downloads/OCP.1.lua'>OCP.1.lua</a>
+      </p>
+
       <h2>OCA Alliance member downloads</h2>
 
       <p>
