Updated for OCA Implementation Chart v06

--- a/downloads.html
+++ b/downloads.html
@@ -62,12 +62,12 @@
       <h2>OCA Implementation Chart</h2>
 
       <p>
-        The OCA Implementation Chart is an Excel spreadsheet that offers a standard way for documenting the OCA objects of a device.
+        The OCA Implementation Chart is an Excel spreadsheet template that offers a standard way for documenting the OCA objects of a device.
 	It is similar in purpose to the "MIDI Implementation Chart" pages frequently found in user manuals of MIDI-controlled devices.
         The OCA Implementation chart is not part of the AES70 standard itself, but instead a recommended practice offered by the OCA Alliance.
       </p>
       <p>
-        Download here: <a href='downloads/OCA Implementation Chart v04 .xlsm'>OCA Implementation Chart v04 .xlsm</a>
+        Download here: <a href='downloads/OCA Implementation Chart v06 .xltm'>OCA Implementation Chart v06 .xltm</a>
       </p>
 
       <h2>OCA Wireshark Plugin</h2>
