--- a/downloads.html
+++ b/downloads.html
@@ -59,15 +59,15 @@
         <a rel=noopener target=_blank href='https://github.com/DeutscheSoft/OCA.js'>https://github.com/DeutscheSoft/OCA.js</a>
       </p>
 
-      <h2>OCA Implementation Chart</h2>
+      <h2>AES70 Implementation Chart</h2>
 
       <p>
-        The OCA Implementation Chart is an Excel spreadsheet template that offers a standard way for documenting the OCA objects of a device.
+        The AES70 Implementation Chart is an Excel spreadsheet template that offers a standard way for documenting the OCA objects of a device.
 	It is similar in purpose to the "MIDI Implementation Chart" pages frequently found in user manuals of MIDI-controlled devices.
-        The OCA Implementation chart is not part of the AES70 standard itself, but instead a recommended practice offered by the OCA Alliance.
+        The AES70 Implementation chart is not part of the AES70 standard itself, but instead a recommended practice offered by the OCA Alliance.
       </p>
       <p>
-        Download here: <a href='downloads/OCA Implementation Chart v06 .xltm'>OCA Implementation Chart v06 .xltm</a>
+        Download here: <a href='https://github.com/OCAAlliance/ocaalliance.github.io/blob/master/downloads/AES70%20Implementation%20Chart%20v06%20.xltm'>OCA Implementation Chart v06 .xltm</a>
       </p>
 
       <h2>OCA Wireshark Plugin</h2>
