downloads: corrected link

--- a/downloads.html
+++ b/downloads.html
@@ -67,7 +67,7 @@
         The AES70 Implementation chart is not part of the AES70 standard itself, but instead a recommended practice offered by the OCA Alliance.
       </p>
       <p>
-        Download here: <a href='https://github.com/OCAAlliance/ocaalliance.github.io/blob/master/downloads/AES70%20Implementation%20Chart%20v06%20.xltm'>OCA Implementation Chart v06 .xltm</a>
+        Download here: <a href='downloads/AES70%20Implementation%20Chart%20v06%20.xltm'>OCA Implementation Chart v06 .xltm</a>
       </p>
 
       <h2>OCA Wireshark Plugin</h2>
