--- a/downloads.html
+++ b/downloads.html
@@ -40,10 +40,10 @@
         <a href='downloads/OCA Micro Hardware Package 20160802.zip'>OCA Micro Hardware Package 20160802.zip</a>
       </p>
 
-      <h2>Focusrite RedNet Virtual Device</h2>
+      <h2>Focusrite RedNet Virtual OCA Device</h2>
 
       <p>
-        The Focusrite RedNet Virtual Device is a device simulation developed by <a rel=noopener target=_blank href='http://focusrite.com'>Focusrite</a>.
+        The Focusrite RedNet Virtual OCA Device is a device simulation developed by <a rel=noopener target=_blank href='http://focusrite.com'>Focusrite</a>.
         It is useful when testing OCA Controllers.
         The device simulation is available as a Windows executable.
         <br>
@@ -63,13 +63,20 @@
 
       <p>
         The AES70 Implementation Chart is an Excel spreadsheet template that offers a standard way for documenting the OCA objects of a device.
-	It is similar in purpose to the "MIDI Implementation Chart" pages frequently found in user manuals of MIDI-controlled devices.
+		It is similar in purpose to the "MIDI Implementation Chart" pages frequently found in user manuals of MIDI-controlled devices.
         The AES70 Implementation chart is not part of the AES70 standard itself, but instead a recommended practice offered by the OCA Alliance.
       </p>
       <p>
-        Download here: <a href='downloads/AES70%20Implementation%20Chart%20v06%20.xltm'>OCA Implementation Chart v06 .xltm</a>
+        Download here: <a href='downloads/AES70 Implementation Chart v06 .xltm'>OCA Implementation Chart v06 .xltm</a>
       </p>
-
+      <p>
+		Here are example implementation charts for OCA devices mentioned elsewhere in this site:
+      </p>
+	  <ul>
+		  <li> <a href='downloads/OCA MicroDemo AES70 Implementation Chart .xlsm'> OCA MicroDemo </a> </li>
+		  <li> <a href='downloads/Focusrite Rednet8 AES70 Implementation Chart .xlsm'> Focusrite Rednet Virtual OCA Device </a> </li>
+	  </ul>
+		
       <h2>OCA Wireshark Plugin</h2>
 
       <p>
