Add presentations from AES143

--- a/downloads.html
+++ b/downloads.html
@@ -85,6 +85,16 @@
       <p>
         Download here: <a href='downloads/OCP.1.lua'>OCP.1.lua</a>
       </p>
+	  
+	  <h2>AES143 Presentations</h2>
+
+      <p>
+        During the AES143 held from October 18th until October 21st 2017. Members of the OCA alliance conducted 2 howto presentations. 
+		The presentations can be downloaded for reference. Remark that audio tracks from the presentations can be purchases via the AES organization.
+      </p>
+      <p>
+        Download here: <a href='downloads/AES143 Network track NA09 - AES70 Device.pdf'>How to make an AES70 device</a> and <a href='downloads/AES143 Network track NA10 - AES70 Controller.pdf'>How to make an AES70 controller</a>
+      </p>
 
       <h2>OCA Alliance member downloads</h2>
 
