Updated download link to refer to new repository

--- a/downloads.html
+++ b/downloads.html
@@ -34,7 +34,7 @@
       </p>
       <p>
         Download source code here:
-        <a href='downloads/OCAMicroOpenSource_r60.zip'>OCAMicroOpenSource_r60.zip</a>
+        <a href='https://github.com/OCAAlliance/OCAMicro'>https://github.com/OCAAlliance/OCAMicro</a>
         <br>
         Download hardware design files here:
         <a href='downloads/OCA Micro Hardware Package 20160802.zip'>OCA Micro Hardware Package 20160802.zip</a>
