Added downloads intro & software listing policies doc

--- a/downloads.html
+++ b/downloads.html
@@ -20,7 +20,12 @@
     </div>
     <div class=content>
       <h1> Downloads </h1>
-
+			<p>
+				This page provides access to tools from OCA Alliance members that aid developers 
+				and supporters of AES70-based equipment and systems. Both commercial and 
+				noncommercial products are included.  Rules covering the listings are 
+				<a href='downloads/Rules for Listing AES70 Products on the OCA Alliance Techsite .pdf'>here</a>.
+			</p>
       <h2>OCA Microdemo</h2>
       <p>
         The OCA Microdemo is a demonstration product developed by OCA Alliance members. Its
