Repair previous post

--- a/downloads.html
+++ b/downloads.html
@@ -24,8 +24,8 @@
 				This page provides access to tools from OCA Alliance members that aid developers 
 				and supporters of AES70-based equipment and systems. Both commercial and 
 				noncommercial products are included.  Rules covering the listings are here:
-				<a href='https://github.com/OCAAlliance/downloads/ListingRules.pdf'>
-					https://github.com/OCAAlliance/downloads/ListingRules.pdf
+				<a href='https://OCAAlliance.github.io/downloads/ListingRules.pdf'>
+					https://OCAAlliance.github.io/downloads/ListingRules.pdf
 				</a>.
 			</p>
       <h2>OCA Microdemo</h2>
