Added mail list info to homepage.  Updated .gitignore.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,44 @@
         The site itself is curated by members of the
         <a rel=noopener target=_blank href='http://ocaalliance.org'>OCA Alliance</a>.
       </p>
+			<h1>Public AES70 Discussion List</h1>
+			<p>
+				The OCA Alliance Technical Committee operates a public discussion list for AES70.  
+				Anyone can post to the list - no membership is needed. Posts will be read and, if necessary,
+				answered by members of the Technical Committee.  Questions and comments are invited on all AES70-related topics.  Newbies and experts are all welcome.
+			<p>
+			<ul>
+				<li>
+				To post to the list, send email to
+				<a href='mailto:aes70support@lists.ocalliance.com'>
+					aes70support@lists.ocalliance.com
+				</a>
+				</li>
+				<li>
+				General information on the list is 
+				<a href='https://lists.ocaalliance.com/mailman/listinfo/aes70support' target='_blank'>
+					here
+				</a>.
+				</li>
+				<li>
+				To register and subscribe to list updates, go 
+				<a href='https://lists.ocaalliance.com/mailman/listinfo/aes70support' target='_blank'>
+					here
+				</a>.
+				</li>
+				<li>
+				A searchable archive of all past email is 
+				<a href='https://lists.ocaalliance.com/pipermail/aes70support/' target='_blank'>
+					here
+				</a>.
+				</li>
+				<li>
+				A downloadable user manual for the mail software (Gnu Mailman) is 
+				<a href='http://www.gnu.org/software/mailman/mailman-member.pdf' target='_blank'>
+					here
+				</a>.
+				</li>
+			</p>
     </div>
   </body>
 </html>
