--- a/downloads.html
+++ b/downloads.html
@@ -28,20 +28,49 @@
 					https://OCAAlliance.github.io/downloads/ListingRules.pdf
 				</a>.
 			</p>
+			
+			<h2>AES70 Compliancy Test Tool (OCTT)</h2>
+			
+			<p>
+				The AES70 Compliancy Test Tool, aka OCTT, is an open-source Windows program for testing 
+				devices' conformance to the minimum AES70 implementation specification defined in Part 2 
+				of the AES70 standard.  
+				OCTT is a programmer's tool designed specifically to confirm that the AES70 protocol interface of a 
+				device under development fulfills the minimum requirements for AES70 compliance.
+				It is not a complete conformance test tool.
+			</p>
+			<p>
+				OCTT supports both AES70-2015 and AES70-2018 devices.  
+				It is driven by an XML control file that users may extend to add their own specific tests.
+			</p>
+			<p>
+				OCTT is a free open-source offering available to all.  
+				No OCA Alliance membership is required, and there are no commercially difficult licensing conditions.
+			</p>
+			<p>
+				Architecturally, OCTT is an AES70 controller.  
+				Hence, its source code may be a useful starting point for development of commercial AES70 controllers.
+			</p>
+			</p>
+				Download source code here and/or Windows installer here: 
+				<a href='https://github.com/OCAAlliance/OcaToolsAndDemos/releases/tag/v2.0.1'>
+					https://github.com/OCAAlliance/OcaToolsAndDemos/releases/tag/v2.0.1
+				</a>
+      </p>
+			
       <h2>OCA Microdemo</h2>
+			
       <p>
         The OCA Microdemo is a demonstration product developed by OCA Alliance members. Its
         primary purpose is to prove that OCA can run well in lightweight hardware environments.
         The MicroDemo meets minimum requirements for AES70 compliance, and provides a small
         set of OCA-controlled application functions as well.
-      </p>
-      <p>
         The custom software, finished schematic diagrams, and PC board layouts, for the MicroDemo are publicly available at no charge, on commercially appropriate licensing terms.
         Please review the OCA Alliance End User License Agreement (<a href='http://ocaalliance.com/eula/'>EULA</a>) prior to downloading and using these tools.
       </p>
       <p>
         Download source code here:
-        <a href='https://github.com/OCAAlliance/OCAMicro'>https://github.com/OCAAlliance/OCAMicro</a>
+        <a href='https://github.com/OCAAlliance/OcaToolsAndDemos'>https://github.com/OCAAlliance/OcaToolsAndDemos</a>
         <br>
         Download hardware design files here:
         <a href='downloads/OCA Micro Hardware Package 20160802.zip'>OCA Micro Hardware Package 20160802.zip</a>
