Updated Developer Resources page for AES70-2018.

--- a/resources.html
+++ b/resources.html
@@ -25,8 +25,17 @@
 
       <p> 	
         The public standard specification of OCA is the AES70 standard, published by the Audio
-        Engineering Society, or AES. The standard is in three documents that are available from the
-        AES Standards office, as follows:
+        Engineering Society, or AES. 
+			</p>
+			<p>
+				The current version of the standard is AES70-2018.  
+				Differences between AES70-2018 and its predecessor, AES70-2015, are summarized here:
+				<a href="https://OCAAlliance.github.io/downloads/What's New in AES70-2018 .pdf">
+					https://OCAAlliance.github.io/downloads/What's New in AES70-2018 .pdf
+				</a>.
+			</p>
+			<p>
+				The standard is in three documents that are available from the AES Standards office, as follows:
       </p>
 
       <h3>1. AES70 Framework</h3>
@@ -37,7 +46,7 @@
       </p>
       <p class=center>
         <a rel=noopener target=_blank href='http://www.aes.org/publications/standards/search.cfm?docID=101'>
-          AES70-1-2015: AES standard for Audio applications of networks - Open Control Architecture - Part 1: Framework
+          AES70-1-2018: AES standard for Audio applications of networks - Open Control Architecture - Part 1: Framework
         </a>
       </p>
 
@@ -50,21 +59,21 @@
        </p>
        <p class=center>
         <a rel=noopener target=_blank href='http://www.aes.org/publications/standards/search.cfm?docID=102'>
-          AES70-2-2015: AES standard for Audio applications of networks - Open Control Architecture - Part 2: Class structure
+          AES70-2-2018: AES standard for Audio applications of networks - Open Control Architecture - Part 2: Class structure
         </a>
       </p>
       <p>
         Also download Annex A in either of two forms (see below for explanation):
       </p>
       <p class=center>
-        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-2-AnnexA-151112-class-structure-1.eap'>
-          www.aes.org/standards/models/AES70-2-AnnexA-151112-class-structure-1.eap
+        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-2-2018-AnnexA.eap'>
+          http://www.aes.org/standards/models/AES70-2-2018-AnnexA.eap
         </a>
         <br>
         or
         <br>
-        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-2-AnnexA-151112-class-structure-1.xmi'>
-          www.aes.org/standards/models/AES70-2-AnnexA-151112-class-structure-1.xmi
+        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-2-2018-AnnexA.xmi'>
+          http://www.aes.org/standards/models/AES70-2-2018-AnnexA.xmi
         </a>
       </p>
 
@@ -72,29 +81,31 @@
       <p>
         Also known as OCP.1, OCP.2, etcetera, these specifications describe protocols that
         implement OCA control over various types of networks.
-        In AES70-2015, only one protocol -- OCP.1 -- is defined. It is for TCP/IP networks. Future
-        updates to the standard will define additional protocols. OCP.1 is published as this AES
-        document (click to go to the AES download page):
+        In AES70-2018, one protocol - OCP.1 - is defined. 
+				OCP.1 runs over IP networks, and can use the TCP, TCP/SSL, UDP, or WebSocket transport protocol.  
+				Future updates to the standard may define additional protocols. 
+				OCP.1 is published as this AES document (click to go to the AES download page):
       </p>
       <p class=center>
         <a rel=noopener target=_blank href='http://www.aes.org/publications/standards/search.cfm?docID=103'>
-          AES70-3-2015: AES standard for Audio applications of networks - Open Control Architecture - Part 3: Protocol for TCP/IP Networks
+          AES70-3-2018: AES standard for Audio applications of networks - Open Control Architecture - Part 3: Protocol for TCP/IP Networks
         </a>
       </p>
       <p>
         Also download Annex B in either of two forms (see below for explanation):
       </p>
       <p class=center>
-        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-3-AnnexB-151112-tcpip-protocol-1.eap'>
-          www.aes.org/standards/models/AES70-3-AnnexB-151112-tcpip-protocol-1.eap
+        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-3-2018-AnnexB.eap'>
+          www.aes.org/standards/models/AES70-3-2018-AnnexB.eap
         </a>
         <br>
         or
         <br>
-        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-3-AnnexB-151112-tcpip-protocol-1.xmi'>
-          www.aes.org/standards/models/AES70-3-AnnexB-151112-tcpip-protocol-1.xmi 
+        <a rel=noopener target=_blank href='http://www.aes.org/standards/models/AES70-3-2018-AnnexB.xmi'>
+          www.aes.org/standards/models/AES70-3-2018-AnnexB.xmi 
         </a>
       </p>
+			
       <h3>Annex UML format</h3>
       <p>
         The two annexes listed above are Universal Modeling Language (UML) specifications.
@@ -103,7 +114,7 @@
       </p>
       <p>The UML files are in two forms:<p>
       <ul>
-        <li>
+        <li  style="margin-bottom:6pt">
           The *.eap files are master files from a UML tool named Enterprise Architect from
           <a rel=noopener target=_blank href='http://www.sparxsystems.com/'>Sparx Systems</a>.
           The usual version of the tool costs US$240, but Sparx Systems offers a
