[downloads]: updated section about OCA.js -> AES70.js

--- a/downloads.html
+++ b/downloads.html
@@ -87,13 +87,15 @@
         Download ZIP Archive here: <a href='downloads/Focusrite RedNet Virtual OCA Device.zip'>Focusrite RedNet Virtual OCA Device.zip</a>
       </p>
 
-      <h2>OCA.js JavaScript library</h2>
+      <h2>AES70.js JavaScript library</h2>
       
       <p>
-        OCA.js is a javascript library that supports OCA. It can be used for building web-based OCA
-        device controllers. It's an open-source component developed by OCA Alliance member
-        DeusO, and is available on GitHub here:
-        <a rel=noopener target=_blank href='https://github.com/DeutscheSoft/OCA.js'>https://github.com/DeutscheSoft/OCA.js</a>
+        AES70.js is a javascript library that implements AES70. It can be used for building OCA
+        device controllers for the web and NodeJS. It's an open-source component developed by OCA Alliance member
+        DeusO. AES70.js is available on github at
+        (<a rel=noopener target=_blank href='https://github.com/DeutscheSoft/AES70.js'>https://github.com/DeutscheSoft/AES70.js</a>)
+        and as an NPM package at
+        (<a rel=noopener target=_blank href='https://www.npmjs.com/package/aes70'>https://www.npmjs.com/package/aes70</a>).
       </p>
 
       <h2>AES70 Implementation Chart</h2>
