Added AES70 Object Model v01 .pdf to downloads. /JB

--- a/downloads.html
+++ b/downloads.html
@@ -133,6 +133,17 @@
         Download here: <a href='downloads/AES143 Network track NA09 - AES70 Device.pdf'>How to make an AES70 device</a> and <a href='downloads/AES143 Network track NA10 - AES70 Controller.pdf'>How to make an AES70 controller</a>
       </p>
 
+      <h2>AES70 Object Model</h2>
+      
+      <p>
+         This brief presentation introduces the AES70 Object Model, the class structure that defines AES70's control repertoire.
+      </p>
+      <p> Download here:
+         <a href='downloads/AES70 Object Model v01 .pdf'>
+            AES70 Object Model v01 .pdf
+         </a>
+      </p>
+
       <h2>OCA Alliance member downloads</h2>
 
       <p>
