Assorted additions to downloads.  /JB

--- a/downloads.html
+++ b/downloads.html
@@ -24,6 +24,7 @@
 				This page provides access to tools from OCA Alliance members that aid developers 
 				and supporters of AES70-based equipment and systems. Both commercial and 
 				noncommercial products are included.  Rules covering the listings are here:
+				&nbsp;&nbsp;
 				<a href='https://OCAAlliance.github.io/downloads/ListingRules.pdf'>
 					https://OCAAlliance.github.io/downloads/ListingRules.pdf
 				</a>.
@@ -52,7 +53,7 @@
 				Hence, its source code may be a useful starting point for development of commercial AES70 controllers.
 			</p>
 			</p>
-				Download source code here and/or Windows installer here: 
+				Download source code here and/or Windows installer here: &nbsp;&nbsp;
 				<a href='https://github.com/OCAAlliance/OcaToolsAndDemos/releases/tag/v2.0.1'>
 					https://github.com/OCAAlliance/OcaToolsAndDemos/releases/tag/v2.0.1
 				</a>
@@ -68,12 +69,17 @@
         The custom software, finished schematic diagrams, and PC board layouts, for the MicroDemo are publicly available at no charge, on commercially appropriate licensing terms.
         Please review the OCA Alliance End User License Agreement (<a href='http://ocaalliance.com/eula/'>EULA</a>) prior to downloading and using these tools.
       </p>
-      <p>
-        Download source code here:
-        <a href='https://github.com/OCAAlliance/OcaToolsAndDemos'>https://github.com/OCAAlliance/OcaToolsAndDemos</a>
-        <br>
-        Download hardware design files here:
-        <a href='downloads/OCA Micro Hardware Package 20160802.zip'>OCA Micro Hardware Package 20160802.zip</a>
+      <p class="tight">
+        Download source code here:&nbsp;&nbsp;
+        <a href='https://github.com/OCAAlliance/OcaToolsAndDemos'>
+					https://github.com/OCAAlliance/OcaToolsAndDemos
+				</a>
+			</p>
+			<p class="tight">
+        Download hardware design files here:&nbsp;&nbsp;
+        <a href='downloads/OCA Micro Hardware Package 20160802.zip'>
+					OCA Micro Hardware Package 20160802.zip
+				</a>
       </p>
 
       <h2>Focusrite RedNet Virtual OCA Device</h2>
@@ -84,7 +90,10 @@
         The device simulation is available as a Windows executable.
        </p>
 			 <p>
-        Download ZIP Archive here: <a href='downloads/Focusrite RedNet Virtual OCA Device.zip'>Focusrite RedNet Virtual OCA Device.zip</a>
+        Download ZIP Archive here: &nbsp;&nbsp;
+					<a href='downloads/Focusrite RedNet Virtual OCA Device.zip'>
+						Focusrite RedNet Virtual OCA Device.zip
+					</a>
       </p>
 
       <h2>AES70.js JavaScript library</h2>
@@ -102,18 +111,29 @@
 
       <p>
         The AES70 Implementation Chart is an Excel spreadsheet template that offers a standard way for documenting the OCA objects of a device.
-		It is similar in purpose to the "MIDI Implementation Chart" pages frequently found in user manuals of MIDI-controlled devices.
+				It is similar in purpose to the "MIDI Implementation Chart" pages frequently found in user manuals of MIDI-controlled devices.
         The AES70 Implementation chart is not part of the AES70 standard itself, but instead a recommended practice offered by the OCA Alliance.
       </p>
       <p>
-        Download here: <a href='downloads/AES70 Implementation Chart v06 .xltm'>OCA Implementation Chart v06 .xltm</a>
+        Download here: &nbsp;&nbsp;
+				<a href='downloads/AES70 Implementation Chart v06 .xltm'>
+					OCA Implementation Chart v06 .xltm
+				</a>
       </p>
       <p>
-		Here are example implementation charts for OCA devices mentioned elsewhere in this site:
+				Here are example implementation charts for OCA devices mentioned elsewhere in this site:
       </p>
       <ul>
-	<li> <a href='downloads/OCA MicroDemo AES70 Implementation Chart .xlsm'> OCA MicroDemo </a> </li>
-	<li> <a href='downloads/Focusrite Rednet8 AES70 Implementation Chart .xlsm'> Focusrite Rednet Virtual OCA Device </a> </li>
+				<li> 
+					<a href='downloads/OCA MicroDemo AES70 Implementation Chart .xlsm'> 
+						OCA MicroDemo 
+					</a> 
+				</li>
+				<li> 
+					<a href='downloads/Focusrite Rednet8 AES70 Implementation Chart .xlsm'> 
+						Focusrite Rednet Virtual OCA Device 
+					</a> 
+				</li>
       </ul>
 		
       <h2>OCA Wireshark Plugin</h2>
@@ -122,29 +142,127 @@
         <a rel=noopener target=_blank href='https://wireshark.org/'>Wireshark</a> is a widely used network protocol analyzer. This plugin allows analyzing OCA network traffic using wireshark.
       </p>
       <p>
-        Download here: <a href='downloads/OCP.1.lua'>OCP.1.lua</a>
+        Download here: &nbsp;&nbsp;
+				<a href='downloads/OCP.1.lua'>
+					OCP.1.lua
+				</a>
       </p>
 	  
 	  <h2>AES143 Presentations</h2>
 
       <p>
         During the AES143 held from October 18th until October 21st 2017. Members of the OCA alliance conducted 2 howto presentations. 
-		The presentations can be downloaded for reference. Remark that audio tracks from the presentations can be purchased via the AES organization.
+				The presentations can be downloaded for reference. Remark that audio tracks from the presentations can be purchased via the AES organization.
       </p>
       <p>
-        Download here: <a href='downloads/AES143 Network track NA09 - AES70 Device.pdf'>How to make an AES70 device</a> and <a href='downloads/AES143 Network track NA10 - AES70 Controller.pdf'>How to make an AES70 controller</a>
+        Download here: <a href='downloads/AES143 Network track NA09 - AES70 Device.pdf'>
+					How to make an AES70 device
+				</a> 
+				&nbsp; and &nbsp;
+				<a href='downloads/AES143 Network track NA10 - AES70 Controller.pdf'>
+					How to make an AES70 controller
+				</a>
       </p>
 
       <h2>AES70 Object Model</h2>
       
       <p>
-         This brief presentation introduces the AES70 Object Model, the class structure that defines AES70's control repertoire.
+         These presentations present the AES70 Object Model, the class structure that defines AES70's control repertoire.
       </p>
-      <p> Download here:
-         <a href='downloads/AES70 Object Model v01 .pdf'>
-            AES70 Object Model v01 .pdf
-         </a>
-      </p>
+			<ol>
+				<li class="looser" > 
+					<p class="tight">
+						The object model and its relationship to AES70 - 20 slides:
+					</p>
+					<ul class="tight">
+						<li>
+							<a href='downloads/AES70 Object Model v01 .pdf'>
+								AES70 Object Model v01 .pdf
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="looser"> 
+					<p class="tight">
+						A detailed look at the object model only, excluding AES70 protocol details - about 60 slides:
+					</p>
+					<ul>
+						<li class="tight">
+							<a href='downloads/The OCA Object Model v07 .ppsx'>
+								The OCA Object Model v07 .ppsx 
+							</a>
+							<i>&nbsp;&nbsp;&nbsp;(navigable version, requires MS PowerPoint)</i>
+						</li>
+						<li class="tight">
+							<a href='downloads/The OCA Object Model v07 .pdf'>
+								The OCA Object Model v07 .pdf
+							</a>
+							<i>&nbsp;&nbsp;&nbsp;(PDF version, sequentially readable only)</i>
+						</li>
+						<li class="tight">
+							<a href='downloads/The OCA Object Model - Quick Look v02 .ppsx'>
+								The OCA Object Model - Quick Look v02 .ppsx
+							</a>
+							<i>&nbsp;&nbsp;&nbsp;(Navigable version, arranged as summary with clickable details - requires MS PowerPoint)</i>
+						</li>					
+					</ul>
+				</li>
+			</ol>
+			
+			<h2>Introductory Materials</h2>
+			
+			<p>
+				These files may be helpful to people who are new to device control based on public, object-oriented standards.
+			</p>
+			
+			<ol>
+				<li class="looser">
+					<p class="tight">
+						<b>Seven frequently-asked questions</b> asked by product managers and developers contemplating the use of a public device control scheme for the first time.  
+					</p>
+					<p class="tight">
+						Download here (2 pages): &nbsp;&nbsp;
+						<a href='downloads/Device Control Newbie FAQ v02 .pdf'>
+							Device Control Newbie FAQ v02 .pdf
+						</a>
+					</p>
+				</li>
+				
+				<li class="looser">
+					<p class="tight">
+						<b>XCA - the eXample Control Architecture.</b>
+						A tiny object-oriented control architecture that mirrors OCA, but is much simpler. 
+						For people new to object-oriented control schemes, it explains the basic ideas of OCA without too much distracting detail.
+					</p>
+					<p class="loose">
+						In the presentation, XCA is used to control a kitchen espresso machine.  
+					</p>
+					<p class="tight">
+						Download here (20 slides):&nbsp;&nbsp;
+						<a href='downloads/XCA v06 .pdf'>
+							XCA v06 .pdf
+						</a>
+					</p>
+				<//li>
+			</ol>
+			
+			<h2> OCA for Video Devices </h2>
+			
+			<p class="loose">
+				Although not originally designed for video devices, 
+				much of OCA is general enough that video device control is possible.
+				In the future, specific video classes will be added to OCA.
+			</p>
+			<p class="loose">
+				As an experiment, we have drafted a partial OCA control model for a modern HD/4K production
+				video camera from a major broadcast equipment manufacturer.  This model is presented in the download, a six-slide presentation.
+			</p>
+			<p class="loose">
+				Download here (6 slides):&nbsp;&nbsp;
+				<a href='downloads/Typical Production Video Camera - OCA Object Model v05 .pdf'>
+					Typical Production Video Camera - OCA Object Model v05 .pdf
+				</a>
+			</p>
 
       <h2>OCA Alliance member downloads</h2>
 
