Made standards numbers more prominent in Developer Resources page

--- a/resources.html
+++ b/resources.html
@@ -38,7 +38,7 @@
 				The standard is in three documents that are available from the AES Standards office, as follows:
       </p>
 
-      <h3>1. AES70 Framework</h3>
+      <h3>1. AES70-1:  AES70 Framework</h3>
       <p>
         Also known as OCF, this specification describes the overall architecture of AES70 and
         describes its mechanisms. OCF is published as this AES document (click to go to the AES
@@ -50,7 +50,7 @@
         </a>
       </p>
 
-      <h3>2. AES70 Class Structure</h3>
+      <h3>2. AES70-2: AES70 Class Structure</h3>
       <p>
         Also known as OCC, this specification describes the object-oriented class structure that
         defines the functional repertoire (connection management, control, and monitoring) of
@@ -77,7 +77,7 @@
         </a>
       </p>
 
-      <h3>3. AES70 Protocols</h3>
+      <h3>3. AES70-3: AES70 Protocols</h3>
       <p>
         Also known as OCP.1, OCP.2, etcetera, these specifications describe protocols that
         implement OCA control over various types of networks.
