Changed Wireshark plugin section to note that plugin isn't needed with Wireshark 4.0 and after.

--- a/downloads.html
+++ b/downloads.html
@@ -136,12 +136,14 @@
 				</li>
       </ul>
 		
-      <h2>OCA Wireshark Plugin</h2>
+      <h2>OCA Wireshark Legacy Plugin</h2>
 
       <p>
-        <a rel=noopener target=_blank href='https://wireshark.org/'>Wireshark</a> is a widely used network protocol analyzer. This plugin allows analyzing OCA network traffic using wireshark.
-      </p>
-      <p>
+        <a rel=noopener target=_blank href='https://wireshark.org/'>Wireshark</a> is a widely used network protocol analyzer. Beginning with Wireshark 4.0, an OCA plugin is included in its standard distribution. 
+			</p>
+			
+			<p>
+				For Wireshark versions before 4.0, this plugin allows analyzing OCA network traffic.
         Download here: &nbsp;&nbsp;
 				<a href='downloads/OCP.1.lua'>
 					OCP.1.lua
