Added Open-Source Software Licensing section to Downloads page.

--- a/downloads.html
+++ b/downloads.html
@@ -257,7 +257,8 @@
 			</p>
 			<p class="loose">
 				As an experiment, we have drafted a partial OCA control model for a modern HD/4K production
-				video camera from a major broadcast equipment manufacturer.  This model is presented in the download, a six-slide presentation.
+				video camera from a major broadcast equipment manufacturer.  This model is presented in the 
+				download, a six-slide presentation.
 			</p>
 			<p class="loose">
 				Download here (6 slides):&nbsp;&nbsp;
@@ -271,8 +272,38 @@
       <p>
         Other OCA downloads are available to OCA Alliance members. These are mainly software
         development tools. Alliance membership information can be found here:
-        <a rel=noopener target=_blank href='http://ocaalliance.com/membership/'>http://ocaalliance.com/membership/</a>
+        <a rel=noopener target=_blank href='http://ocaalliance.com/membership/'>
+					http://ocaalliance.com/membership/
+				</a>.
       </p>
+			
+			<h2>Open-source software licensing</h2>
+
+      <p>
+				Open-source software downloads from the OCA Alliance are licensed for use under the 
+				<b>Apache v2.0 license</b>, the text of which is available here:&nbsp;&nbsp;
+				<a rel=noopener target=_blank href="https://www.apache.org/licenses/LICENSE-2.0">
+					https://www.apache.org/licenses/LICENSE-2.0
+				</a>.
+      </p>
+			
+			<p>
+				Individuals wishing to contribute code for incorporation into future versions of 
+				downloadable materials are required to execute an 
+				<b>Apache v2.2 Individual Contributor License Agreement</b>, the text of which is here:&nbsp;&nbsp;
+				<a rel=noopener target=_blank href="https://www.apache.org/licenses/icla.pdf">
+					https://www.apache.org/licenses/icla.pdf
+				</a>.
+			</p>
+			
+			<p>
+				When a code contribution contains one or more new modules, a <b>license notice</b> 
+				must be included in each one.  The required text of this notice is given at the bottom of 
+				the Apache v2.0 license page, here:&nbsp;&nbsp;
+				<a rel=noopener target=_blank href="https://www.apache.org/licenses/LICENSE-2.0">
+					https://www.apache.org/licenses/LICENSE-2.0
+				</a>&nbsp;&nbsp;(scroll down).
+
     </div>
   </body>
 </html>
