Add public information on public open-source projects - licensing, use, contributing, managing.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
       <div class=logo>
         Technical Site
       </div>
-      <div class=topnav>
-        <ul>
-          <li><a href='index.html'>Home</a></li>
-          <li><a href='downloads.html'>Downloads</a></li>
-          <li><a href='resources.html'>Developer Resources</a></li>
-          <li><a href='links.html'>Links</a></li>
-        </ul>
-      </div>
+			<div class=topnav>
+				<ul>
+					<li><a href='index.html'>Home</a></li>
+					<li><a href='downloads.html'>Downloads</a></li>
+					<li><a href='resources.html'>Developer Resources</a></li>
+					<li><a href='licensing.html'>Licensing</a></li>
+					<li><a href='opensource.html'>Open-Source Software</a></li>
+					<li><a href='links.html'>Links</a></li>
+				</ul>
+			</div>
     </div>
     <div class=content>
       <h1>Introduction</h1>
